--- a/src/assets/styles/_utils.scss
+++ b/src/assets/styles/_utils.scss
@@ -38,3 +38,11 @@
 .mt-15 {
   margin-top: 15px;
 }
+
+.font-color-gold {
+  color: var(--gold);
+}
+
+.font-color-transparent-04 {
+  color: var(--gold-transparent-04);
+}
