--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -4,6 +4,7 @@
   --dark-transparent: rgb(29, 39, 49, 0.8);
   --gold: #d9b310;
   --gold-transparent: rgb(217, 179, 16, 0.8);
+  --gold-transparent-04: rgb(217, 179, 16, 0.4);
   --prink: #fd50f2;
   --skyBlue: #328cc1;
   --skyBlue-transparent: rgb(50, 140, 193, 0.8);
