--- a/src/Pages/Homepage/components/Skills/Skills.module.scss
+++ b/src/Pages/Homepage/components/Skills/Skills.module.scss
@@ -1,3 +1,5 @@
+@use "../../../../assets/styles/mixins" as mixin;
+
 .skillsContainer {
   background-color: white;
   padding: 20px;
@@ -5,11 +7,21 @@
   h2 {
     color: var(--gold);
   }
-  .skillsContent {
+  .skillsContentIT {
     max-width: 1200px;
     color: var(--dark);
     padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    @include mixin.medium {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @include mixin.xs {
+      grid-template-columns: 1fr;
+    }
+
     .cardSkillContainer {
+      justify-content: space-between;
       margin: 20px;
       padding: 20px;
       width: 220px;
@@ -25,13 +37,26 @@
         font-style: italic;
       }
     }
+  }
+  .skillsContentOth {
+    display: flex;
+    flex-direction: row;
+    @include mixin.xs-medium {
+      flex-direction: column;
+    }
     .largeCardSkillContainer {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
       margin: 20px;
       padding: 20px;
-      width: 550px;
+      width: 450px;
       height: 200px;
       border: 1px solid var(--gold);
       border-radius: var(--border-radius);
+      @include mixin.xs {
+        width: 350px;
+      }
       img {
         height: 50px;
         margin-bottom: 20px;
