--- a/src/Pages/Portfolio/Portfolio.module.scss
+++ b/src/Pages/Portfolio/Portfolio.module.scss
@@ -1,3 +1,5 @@
+@use "../../assets/styles/mixins" as mixin;
+
 .portfolioContainer {
   background-color: var(--grey-light);
   padding: 20px;
@@ -12,16 +14,28 @@
     border: 2px solid var(--gold);
     padding: 20px;
     border-radius: var(--border-radius);
+    @include mixin.xs {
+      width: 350px;
+      height: 450px;
+    }
     .title {
       margin-bottom: 10px;
       font-size: 24px;
       font-weight: 700;
       color: var(--prussianBlue);
+      @include mixin.xs {
+        font-size: 18px;
+      }
     }
     .description {
       margin-bottom: 20px;
+      height: 32px;
       color: var(--prussianBlue);
       font-style: italic;
+      @include mixin.xs {
+        font-size: 14px;
+        height: 48px;
+      }
     }
     .imageContainer {
       margin-bottom: 20px;
@@ -33,6 +47,10 @@
         object-fit: contain;
         animation-name: porfolioImageAnimation;
         border-radius: var(--border-radius);
+        @include mixin.xs {
+          width: 180px;
+          height: 250px;
+        }
       }
     }
     .btnCode {
@@ -44,6 +62,11 @@
       &:hover {
         background-color: var(--prussianBlue-transparent-04);
       }
+      @include mixin.xs {
+        padding: 5px 10px;
+        margin: 5px;
+        font-size: 12px;
+      }
     }
     .btnWebsite {
       padding: 10px 20px;
@@ -53,6 +76,11 @@
       transition: 0.5s;
       &:hover {
         background-color: var(--gold-transparent-04);
+      }
+      @include mixin.xs {
+        padding: 5px 10px;
+        margin: 5px;
+        font-size: 12px;
       }
     }
   }
