--- a/src/assets/styles/_flex.scss
+++ b/src/assets/styles/_flex.scss
@@ -18,6 +18,10 @@
   justify-content: center;
 }
 
+.justify-content-start {
+  justify-content: flex-start;
+}
+
 .justify-content-flex-end {
   justify-content: flex-end;
 }
@@ -28,6 +32,10 @@
 
 .align-items-center {
   align-items: center;
+}
+
+.align-items-start {
+  align-items: flex-start;
 }
 
 .space-between {
