--- a/src/Pages/Contact/Contact.module.scss
+++ b/src/Pages/Contact/Contact.module.scss
@@ -1,18 +1,83 @@
+@use "../../assets/styles/mixins" as mixin;
+
 .contactContainer {
-  background-color: var(--grey-light);
+  min-height: 60vh;
+  display: flex;
+  flex-direction: column;
+    justify-content: center;
+  align-items: center;
+  background-color: 
+  white;
   padding: 20px;
   color: var(--prussianBlue);
+
+  gap: 20px;
+  @include mixin.xs {
+    min-height: auto;
+  }
+  
+  h2 {
+    color: var(--gold);
+  }
   .contactContent {
-    padding: 20px;
-    h2 {
-      color: var(--gold);
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      gap: 70px;
+      margin-bottom: 20px;
+      @include mixin.xs {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        margin-bottom: 20px;
+      }
+      .logoContainer {
+        width: 100px;
+        height: 120px;
+      }
+      .logoContainer {
+        width: 300px;
+        height: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 20px 0;
+      }
+  }
+
+  .coord {
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+    justify-content: space-evenly;
+    @include mixin.xs {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
     }
     a {
-      color: var(--prussianBlue);
-
-      &:hover {
-        color: var(--prussianBlue-transparent-04);
+      min-width: 200px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      span{
+        margin-top: 12px;
+        transition: all 0.8s;
+        border-radius: 50%;
       }
+      i {
+        transition: all 0.8s;
+        font-size: 25px;
+      } 
+    &:hover i{
+      transform: rotateY(180deg);
+      color: var(--gold);
+    }
     }
   }
+
+
+
 }
