--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -14,4 +14,6 @@
   --font-family: "Assistant", sans-serif;
   --second-font-familly: "Goudy Bookletter 1911", serif;
   --border-radius: 2px;
+  --box-shadow: rgba(11, 60, 93, 0.4) 2px 2px 20px 0px;;
+  --inner-box-shadow: inset -3px 0px 12px -2px rgba(0,0,0,0.1), inset 3px 0px 12px -2px rgba(0,0,0,0.1);
 }
